Fix z-index issue in styles refs #5

--- a/css/ang-accordion.css
+++ b/css/ang-accordion.css
@@ -49,6 +49,7 @@
 
 .collapsible-item.open .body {
   max-height: 600px;
+  z-index: 1;
 }
 
 .collapsible-item.open .title {
